# verbatim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CreateInXcode.md  Package.swift  README.md  RESEARCH_AND_BUILD_NOTES.md  Verbatim.xcodegen.yml  Verbum.xcodegen.yml
.claude/: napkin.md
NativeTests/: SharedCoreBridgeTests.swift  VerbatimNativeTests.swift
RustCore/: Cargo.toml
SharedAssets/: ModelManifest.json
Shells/: README.md
Shells/linux/: Cargo.toml  README.md
Shells/linux/scripts/: build.sh  test.sh
Shells/linux/src/: main.rs  models.rs  paths.rs  state.rs
Tests/: AppleLocalTranscriptionServiceTests.swift  ContextPackBuilderTests.swift  DeterministicFormatterServiceTests.swift  GlobalHotkeyServiceTests.swift  HotkeyValidatorTests.swift  InteractionSettingsTests.swift  LLMFormatterRouterTests.swift  OllamaLocalLogicServiceTests.swift  PostTranscriptionPipelineTests.swift  RefineSettingsTests.swift  ServerSentEventParserTests.swift  TranscriptIntentResolverTests.swift  TranscriptRecordStoreTests.swift  TranscriptionCoordinatorTests.swift  TranscriptionViewModelHotkeySessionTests.swift  WhisperAudioLoaderTests.swift  WhisperKitLocalTranscriptionServiceTests.swift  WhisperModelManagerTests.swift
docs/: 2026-03-09_openwhispr_gap_map.md  architecture.md  feature-parity-matrix.md  release-checklist.md  retired-legacy-features.md  shell-core-contract.md
scripts/: build-verbatim.sh  build-verbum.sh  build_host_shell.ps1  build_host_shell.sh  build_rust_core.ps1  build_rust_core.sh  install_dev_app.sh  install_host_app.ps1  install_host_app.sh  run_dev_app.sh  (+3 more)
(+287 files in other folders)
