[package]
name = "verbatim-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.7" }
gtk = { package = "gtk4", version = "0.9" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cpal = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
verbatim_core_contract = { path = "../../RustCore/crates/verbatim_core_contract" }
